# UNSW-Discord-Verification-Bot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SecSoc Discord Verification.drawio  bot.py  config.py  docker-compose.yml  export.py  otp.py  prek.toml  pyproject.toml  requirements.txt  sample_env  utils.py  verification.db
.github/workflows/: ci.yml  docker.yml
HLA/: SecSoc Discord Verification.drawio.xml
src/: bot.py  config.py  export.py  logs.py  otp.py  utils.py
src/templates/: email_template.html
