[project]
name = "unsw-discord-verification-bot"
version = "0.1.0"
description = "A simple and secure email-based verification bot for UNSW students and staff, hosted for free by the UNSW Security Society."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "audioop-lts==0.2.2",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "discord.py==2.6.4",
    "frozenlist==1.8.0",
    "idna==3.11",
    "multidict==6.7.1",
    "propcache==0.4.1",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "yarl==1.22.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.13",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

# ===== Ruff =====
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = [
    "B",      # bugbear
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming conventions
    "W",      # pycodestyle warnings
    "C4",     # comprehensions
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PIE",    # misc lints
    "PYI",    # flake8-pyi
    "TID",    # tidy imports
    "TCH",    # type-checking imports
    "RUF",    # Ruff-specific rules
    "RSE",    # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PLC0415", # Local imports which may be performance related
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ===== ty =====
[tool.ty]
