[project]
name = "unsw-discord-verification-bot"
version = "0.1.0"
description = "A simple and secure email-based verification bot for UNSW students and staff, hosted for free by the UNSW Security Society."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord.py==2.6.4",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "prek>=0.3.13",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

# ===== Ruff =====
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = [
    "B",      # bugbear
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming conventions
    "W",      # pycodestyle warnings
    "C4",     # comprehensions
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PIE",    # misc lints
    "PYI",    # flake8-pyi
    "TID",    # tidy imports
    "TCH",    # type-checking imports
    "RUF",    # Ruff-specific rules
    "RSE",    # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PLC0415", # Local imports which may be performance related
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ===== ty =====
[tool.ty]
